--- a/src/output.css
+++ b/src/output.css
@@ -608,8 +608,25 @@ video {
   margin: auto;
 }
 
+.mx-\[\] {
+  margin-left: ;
+  margin-right: ;
+}
+
+.mt-\[100px\] {
+  margin-top: 100px;
+}
+
 .mt-\[20px\] {
   margin-top: 20px;
+}
+
+.mt-\[\] {
+  margin-top: ;
+}
+
+.mt-\[50px\] {
+  margin-top: 50px;
 }
 
 .inline {
@@ -632,12 +649,20 @@ video {
   height: 0.25rem;
 }
 
+.w-\[100\%\] {
+  width: 100%;
+}
+
+.w-\[40\%\] {
+  width: 40%;
+}
+
 .w-\[60\%\] {
   width: 60%;
 }
 
-.w-\[\] {
-  width: ;
+.w-\[70\%\] {
+  width: 70%;
 }
 
 .max-w-\[1200px\] {
@@ -678,12 +703,32 @@ video {
   align-items: center;
 }
 
+.justify-center {
+  justify-content: center;
+}
+
 .justify-between {
   justify-content: space-between;
 }
 
 .gap-\[20px\] {
   gap: 20px;
+}
+
+.gap-\[50px\] {
+  gap: 50px;
+}
+
+.gap-\[40px\] {
+  gap: 40px;
+}
+
+.gap-\[20ox\] {
+  gap: 20ox;
+}
+
+.gap-\[\] {
+  gap: ;
 }
 
 .rounded-md {
@@ -716,9 +761,33 @@ video {
   background-color: rgb(68 109 246 / var(--tw-bg-opacity, 1));
 }
 
+.bg-\[\] {
+  background-color: ;
+}
+
+.bg-\[\#141B41\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(20 27 65 / var(--tw-bg-opacity, 1));
+}
+
+.px-\[10px\] {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
 .px-\[20px\] {
   padding-left: 20px;
   padding-right: 20px;
+}
+
+.px-\[30px\] {
+  padding-left: 30px;
+  padding-right: 30px;
+}
+
+.px-\[40px\] {
+  padding-left: 40px;
+  padding-right: 40px;
 }
 
 .py-\[10px\] {
@@ -726,29 +795,51 @@ video {
   padding-bottom: 10px;
 }
 
-.py-\[8px\] {
-  padding-top: 8px;
-  padding-bottom: 8px;
-}
-
 .py-\[20px\] {
   padding-top: 20px;
   padding-bottom: 20px;
 }
 
-.py-\[20ppx\] {
-  padding-top: 20ppx;
-  padding-bottom: 20ppx;
-}
-
-.py-\[\] {
-  padding-top: ;
-  padding-bottom: ;
+.py-\[30px\] {
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 
 .py-\[50px\] {
   padding-top: 50px;
   padding-bottom: 50px;
+}
+
+.py-\[8px\] {
+  padding-top: 8px;
+  padding-bottom: 8px;
+}
+
+.px-\[\] {
+  padding-left: ;
+  padding-right: ;
+}
+
+.py-\[20ox\] {
+  padding-top: 20ox;
+  padding-bottom: 20ox;
+}
+
+.px-\[20ox\] {
+  padding-left: 20ox;
+  padding-right: 20ox;
+}
+
+.pl-\[100px\] {
+  padding-left: 100px;
+}
+
+.pr-\[200px\] {
+  padding-right: 200px;
+}
+
+.pt-\[0px\] {
+  padding-top: 0px;
 }
 
 .pt-\[20px\] {
@@ -759,8 +850,24 @@ video {
   padding-top: 50px;
 }
 
+.pt-\[60px\] {
+  padding-top: 60px;
+}
+
+.pr-\[100px\] {
+  padding-right: 100px;
+}
+
 .text-center {
   text-align: center;
+}
+
+.text-\[15px\] {
+  font-size: 15px;
+}
+
+.text-\[18px\] {
+  font-size: 18px;
 }
 
 .text-\[20px\] {
@@ -769,6 +876,10 @@ video {
 
 .text-\[23\.2px\] {
   font-size: 23.2px;
+}
+
+.text-\[25px\] {
+  font-size: 25px;
 }
 
 .text-\[30px\] {
@@ -781,10 +892,6 @@ video {
 
 .font-bold {
   font-weight: 700;
-}
-
-.font-extrabold {
-  font-weight: 800;
 }
 
 .font-semibold {
@@ -815,8 +922,23 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
+.text-\[\] {
+  color: ;
+}
+
+.text-\[\#E9ECF5\] {
+  --tw-text-opacity: 1;
+  color: rgb(233 236 245 / var(--tw-text-opacity, 1));
+}
+
 .underline {
   text-decoration-line: underline;
+}
+
+.shadow-2xl {
+  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
+  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .ring {
@@ -846,44 +968,36 @@ video {
     display: none;
   }
 
-  .md\:w-\[\] {
-    width: ;
-  }
-
   .md\:w-\[100\%\] {
     width: 100%;
-  }
-
-  .md\:w-\[50\%\] {
-    width: 50%;
-  }
-
-  .md\:w-\[20\%\] {
-    width: 20%;
-  }
-
-  .md\:w-\[30\%\] {
-    width: 30%;
-  }
-
-  .md\:w-\[35\%\] {
-    width: 35%;
-  }
-
-  .md\:w-\[55\%\] {
-    width: 55%;
   }
 
   .md\:w-\[45\%\] {
     width: 45%;
   }
 
+  .md\:w-\[50\%\] {
+    width: 50%;
+  }
+
+  .md\:w-\[60\%\] {
+    width: 60%;
+  }
+
+  .md\:max-w-\[800px\] {
+    max-width: 800px;
+  }
+
   .md\:flex-row {
     flex-direction: row;
   }
 
-  .md\:flex-col {
-    flex-direction: column;
+  .md\:gap-\[20px\] {
+    gap: 20px;
+  }
+
+  .md\:rounded-3xl {
+    border-radius: 1.5rem;
   }
 
   .md\:px-\[0px\] {
@@ -896,20 +1010,20 @@ video {
     padding-bottom: 20px;
   }
 
-  .md\:pr-\[\] {
-    padding-right: ;
+  .md\:pl-\[0px\] {
+    padding-left: 0px;
   }
 
-  .md\:pr-\[100px\] {
-    padding-right: 100px;
+  .md\:pl-\[100px\] {
+    padding-left: 100px;
   }
 
   .md\:pr-\[200px\] {
     padding-right: 200px;
   }
 
-  .md\:pr-\[00px\] {
-    padding-right: 00px;
+  .md\:pt-\[0px\] {
+    padding-top: 0px;
   }
 
   .md\:text-start {
